<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.myapplication.list_view.ListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/text_8"
            android:onClick="onOrderBag"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16sp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/theft" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textB1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8sp"
                        android:text="Waist Wallet Anti Theft Camo"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB1"
                        android:id="@+id/textB1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="(Stock Available)"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB1_1"
                        android:id="@+id/textB1_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="@string/price_80"
                        android:textColor="#F9845B"
                        android:textSize="15sp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/text_8"
            android:onClick="onOrderBag2"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16sp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/amarok" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8sp"
                        android:text="Waist Bag Amarok.4 Black"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB2"
                        android:id="@+id/textB2_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="(Stock Available)"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB2_1"
                        android:id="@+id/textB2_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="@string/price_190"
                        android:textColor="#F9845B"
                        android:textSize="15sp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/text_8"
            android:onClick="onOrderBag3"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/nico" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textB3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8sp"
                        android:text="Messenger Bag Nico Brown"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB3"
                        android:id="@+id/textB3_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="(Stock Available)"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB3_1"
                        android:id="@+id/textB3_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="@string/price_195"
                        android:textColor="#F9845B"
                        android:textSize="15sp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/text_8"
            android:onClick="onOrderBag4"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/nephin" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textB4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8sp"
                        android:text="Sling Bag Nephin Drk Green-Black"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB4"
                        android:id="@+id/textB4_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="(Stock Available)"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB4_1"
                        android:id="@+id/textB4_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="@string/price_195"
                        android:textColor="#F9845B"
                        android:textSize="15sp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/text_8"
            android:onClick="onOrderBag5"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/cheansb" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textB5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="SB Chelan Army Green"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB5"
                        android:id="@+id/textB5_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="(Stock Available)"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB5_1"
                        android:id="@+id/textB5_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="@string/price_180"
                        android:textColor="#F9845B"
                        android:textSize="15sp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/text_8"
            android:onClick="onOrderBag6"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/eastfor" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textB6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="BP Eastfor Navy"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB6"
                        android:id="@+id/textB6_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="(Stock Available)"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        />

                    <TextView
                        android:layout_below="@+id/textB6_1"
                        android:id="@+id/textB6_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/text_8"
                        android:text="@string/price_235"
                        android:textColor="#F9845B"
                        android:textSize="15sp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
